--- a/index.html
+++ b/index.html
@@ -124,8 +124,6 @@
 		</div>
 	</div>
 
-
-
 	<div id="fh5co-blog" class="fh5co-section">
 		<div class="container">
 			<div class="row animate-box">
@@ -169,13 +167,26 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Book a Table</h2>
-					<p>Unfortunately due to the corona virus we are currently not accepting any reservations at the moment. Sorry for any inconvenience. </p>
-					<!-- href="mailto:info@kunisushiya.offical@gmail.com" -->
-					<p><a class="btn btn-primary btn-outline" disabled>Contact Us</a></p>
+					<p>Call us at (416)260-3188 </p>
 				</div>
 			</div>
 		</div>
 	</div>
+
+
+		<div class="fh5co-section">
+			<div class="container">
+				<div class="row animate-box">
+					<div class="text-center fh5co-heading animate-box" style="margin-top: 350px!important;">
+						<div>
+							<h2 style="color: white">Recently Featured</h2>
+							<h4 style="color: white">Click Below to learn more!</h4>
+						</div>
+						<a href="https://torontoblogs.ca/best-ayce-sushi-places-in-toronto/"><img src="toronto_blogs.png" style="width:250px" alt="Toronto blogs url"></a>
+					</div>
+				</div>
+			</div>
+		</div>
 
 	<footer id="fh5co-footer" role="contentinfo" class="fh5co-section">
 		<div class="container">
