--- a/menu.html
+++ b/menu.html
@@ -190,9 +190,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Book a Table</h2>
-					<p>Unfortunately due to the corona virus we are currently not accepting any reservations at the moment. Sorry for any inconvenience. </p>
-					<!-- href="mailto:info@kunisushiya.offical@gmail.com" -->
-					<p><a class="btn btn-primary btn-outline" disabled>Contact Us</a></p>
+					<p>Call us at (416)260-3188 </p>
 				</div>
 			</div>
 		</div>
