--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 				<div class="row animate-box">
 					<div class="text-center fh5co-heading animate-box" style="margin-top: 350px!important;">
 						<div>
-							<h2 style="color: white">Recently Featured</h2>
-							<h4 style="color: white">Click Below to learn more!</h4>
+							<h2 style="color: white; font-family: 'Satisfy', cursive;">Recently Featured</h2>
+							<h4 style="color: white; font-family: 'Satisfy', cursive;">Click Below to learn more!</h4>
 						</div>
 						<a href="https://torontoblogs.ca/best-ayce-sushi-places-in-toronto/"><img src="toronto_blogs.png" style="width:250px" alt="Toronto blogs url"></a>
 					</div>
